--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,21 @@
   justify-content: space-between;
   align-items: center;
 }
+
+button {
+  margin-left: 10px;
+}
+.danger {
+  max-width: 40px;
+  max-width: 40px;
+}
+
+img {
+  max-width: 100%;
+}
+
+.main_input {
+  position: sticky;
+  top: 20px;
+  z-index: 100;
+}
